2012-10-05  Simon Fraser  <simon.fraser@apple.com>

        Provide a way to run WebKit1
        https://bugs.webkit.org/show_bug.cgi?id=98568

        Reviewed by Tim Horton.

        Make it possible to create both WebKit1 and WebKit2 windows in MiniBrowser.
        
        Turn BrowserWindowController into a base class; subclassed by
        WK1BrowserWindowController and WK2BrowserWindowController, each of
        which implement the BrowserController protocol.
        
        Use Command-N to get a WebKit1 window, and Command-Option-N to
        get a WK2 window. Also add "Open Location" to focus the URL bar,
        and code to add an http:// if missing.
        
        Hook up window title callbacks; append " [WK1/2]" to window title
        as appropriate.

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:
        * MiniBrowser/mac/AppDelegate.m:
        (-[BrowserAppDelegate newWindow:]):
        (-[BrowserAppDelegate openPanelDidEnd:returnCode:contextInfo:]):
        * MiniBrowser/mac/BrowserWindowController.h:
        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController initWithWindow:]):
        (-[BrowserWindowController windowDidLoad]):
        (-[BrowserWindowController openLocation:]):
        (-[BrowserWindowController loadURLString:]):
        (-[BrowserWindowController applicationTerminating]):
        (-[BrowserWindowController addProtocolIfNecessary:]):
        * MiniBrowser/mac/MainMenu.xib:
        * MiniBrowser/mac/WK1BrowserWindowController.h: Copied from Tools/MiniBrowser/mac/BrowserWindowController.h.
        (WebView):
        * MiniBrowser/mac/WK1BrowserWindowController.m: Added.
        (-[WK1BrowserWindowController awakeFromNib]):
        (-[WK1BrowserWindowController dealloc]):
        (-[WK1BrowserWindowController loadURLString:]):
        (-[WK1BrowserWindowController fetch:]):
        (-[WK1BrowserWindowController showHideWebView:]):